add fields