@@ -12,14 +12,16 @@ public class SolutionHashMap {
         map.put("Arbus", false);
         map.put("Baby", null);
         map.put("Cat", "Cat");
-        map.put("Eat", new Long(56));
-        map.put("Food", new Character('3'));
+        map.put("Eat", Long.valueOf(56L));
+        map.put("Food", Character.valueOf('3'));
         map.put("Gevey", '6');
         map.put("Hugs", 111111111111L);
         map.put("Comp", (double) 123);
 
         //write your code here
-
+        for (Map.Entry<String, Object> pair : map.entrySet()) {
+            System.out.println(pair.getKey() + " - " + pair.getValue());
+        }
 
     }
 
